get public by id , slug and update swagger
