# docs/swagger.json
@@ -743,6 +743,296 @@
                 }
             }
         },
+        "/api/products": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create Product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Create Product",
+                "parameters": [
+                    {
+                        "description": "Create Product",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/IRequest.CreateProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/IResponse.Product"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/delete-many": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete many Product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Delete many Product",
+                "parameters": [
+                    {
+                        "description": "DeleteMany Product",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/IRequest.DeleteManyProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Delete many Product success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/like": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Like product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Like product",
+                "parameters": [
+                    {
+                        "description": "like product",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/IRequest.LikeProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Like product success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/public/slug/{productSlug}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Product by slug",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get Product by slug",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "product slug",
+                        "name": "productSlug",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "isViewed",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/IResponse.Product"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/public/{productId}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Product by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get Product by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "product ID",
+                        "name": "productId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "isViewed",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/IResponse.Product"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/unlike": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Unlike product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Unlike product",
+                "parameters": [
+                    {
+                        "description": "unlike product",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/IRequest.UnLikeProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Unlike product success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/products/{productId}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Product by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Get Product by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "product ID",
+                        "name": "productId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/IResponse.Product"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete Product",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Delete Product",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Delete Product",
+                        "name": "productId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/role": {
             "get": {
                 "security": [
@@ -1008,6 +1298,60 @@
                 }
             }
         },
+        "IRequest.CreateProduct": {
+            "type": "object",
+            "required": [
+                "countInStock",
+                "description",
+                "image",
+                "location",
+                "name",
+                "price",
+                "slug",
+                "status",
+                "type"
+            ],
+            "properties": {
+                "countInStock": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "discount": {
+                    "type": "integer"
+                },
+                "discountEndDate": {
+                    "type": "string",
+                    "example": "[{\"value\": \"null or time\"}]"
+                },
+                "discountStart": {
+                    "type": "string",
+                    "example": "[{\"value\": \"null or time\"}]"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
         "IRequest.CreateProductType": {
             "type": "object",
             "required": [
@@ -1046,6 +1390,20 @@
                 "arrayId": {
                     "type": "array",
                     "minItems": 1,
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "IRequest.DeleteManyProduct": {
+            "type": "object",
+            "required": [
+                "arrayId"
+            ],
+            "properties": {
+                "arrayId": {
+                    "type": "array",
                     "items": {
                         "type": "integer"
                     }
@@ -1128,6 +1486,17 @@
                 }
             }
         },
+        "IRequest.LikeProduct": {
+            "type": "object",
+            "required": [
+                "productId"
+            ],
+            "properties": {
+                "productId": {
+                    "type": "integer"
+                }
+            }
+        },
         "IRequest.LoginRequest": {
             "type": "object",
             "required": [
@@ -1176,6 +1545,17 @@
                 }
             }
         },
+        "IRequest.UnLikeProduct": {
+            "type": "object",
+            "required": [
+                "productId"
+            ],
+            "properties": {
+                "productId": {
+                    "type": "integer"
+                }
+            }
+        },
         "IRequest.UpdateAuthMe": {
             "type": "object",
             "required": [
@@ -1213,32 +1593,6 @@
                 }
             }
         },
-        "IResponse.Addresses": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "city": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "isDefault": {
-                    "type": "boolean"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "middleName": {
-                    "type": "string"
-                },
-                "phoneNumber": {
-                    "type": "string"
-                }
-            }
-        },
         "IResponse.AuthMe": {
             "type": "object",
             "properties": {
@@ -1247,12 +1601,6 @@
                 },
                 "address": {
                     "type": "string"
-                },
-                "addresses": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/IResponse.Addresses"
-                    }
                 },
                 "avatar": {
                     "type": "string"
@@ -1322,6 +1670,71 @@
                 }
             }
         },
+        "IResponse.Product": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "integer"
+                },
+                "countInStock": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "discount": {
+                    "type": "integer"
+                },
+                "discountEndDate": {
+                    "type": "string"
+                },
+                "discountStartDate": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "likedBy": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "location": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "totalLikes": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "integer"
+                },
+                "uniqueViews": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "views": {
+                    "type": "integer"
+                }
+            }
+        },
         "IResponse.ProductType": {
             "type": "object",
             "properties": {
@@ -1368,12 +1781,6 @@
                 "address": {
                     "type": "string"
                 },
-                "addresses": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/IResponse.Addresses"
-                    }
-                },
                 "avatar": {
                     "type": "string"
                 },
@@ -1414,12 +1821,6 @@
                 },
                 "address": {
                     "type": "string"
-                },
-                "addresses": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/IResponse.Addresses"
-                    }
                 },
                 "avatar": {
                     "type": "string"
